# master

./: CMakeCache.txt  CMakeLists.txt  Makefile  PupilTracker.h  README.md  README.txt  beast-tracker  beast-tracker.cpp  cmake_install.cmake  cvx.h  minilab-1008.c  pmd.c  pmd.h  timer.h
extras/: flicker-screen  flicker-screen.c  latency-test  latency-test.c  test-usb20X.c
history/: .old-beast-tracker.cpp.swp  beast-tracker.cpp.hist1  beast-tracker.cpp.hist2  old-beast-tracker.cpp
libhid/: usb-1208FS-Plus.h  usb-1208HS.h  usb-1608FS-Plus.h  usb-1608G.h  usb-1608HS.h  usb-2020.h  usb-20X.h  usb-2600.h  usb-3100.h  usb-500.h  usb-ctr.h
libhid/pkgconfig/: libhid.pc
